--- a/cast.html
+++ b/cast.html
@@ -48,11 +48,11 @@
 <div class="topnav" id="myTopnav">
   <a href="/">Home</a>
   <a href="episodes">Episodes</a>
-  <a href="events">Events</a>
-  <a href="about">About</a>
-  <a href="cast" class="active">Cast</a>
-  <a href="news">News</a>
-  <a href="extra">More</a>
+  <a href="events.html">Events</a>
+  <a href="about.html">About</a>
+  <a href="cast.html" class="active">Cast</a>
+  <a href="news.html">News</a>
+  <a href="extra.html">More</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
