--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
 <div class="topnav" id="myTopnav">
   <a href="/">Home</a>
   <a href="episodes">Episodes</a>
-  <a href="events">Events</a>
-  <a href="about" class="active">About</a>
-  <a href="cast">Cast</a>
-  <a href="news">News</a>
-  <a href="extra">More</a>
+  <a href="events.html">Events</a>
+  <a href="about.html" class="active">About</a>
+  <a href="cast.html">Cast</a>
+  <a href="news.html">News</a>
+  <a href="extra.html">More</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
