--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="episodes">Episodes</a>
-  <a href="events">Events</a>
-  <a href="about">About</a>
-  <a href="cast">Cast</a>
-  <a href="news">News</a>
-  <a href="extra">More</a>
+  <a href="events.html">Events</a>
+  <a href="about.html">About</a>
+  <a href="cast.html">Cast</a>
+  <a href="news.html">News</a>
+  <a href="extra.html">More</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -57,7 +57,7 @@
     <a href='episode/1'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Start Reading</span><br><i>Unknowing.</i></div><br></a>
     <a href='episode/1'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Most Recent</span><br><i>Unknowing.</i></div><br></a>
     <a href='episodes'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Episodes</span><br><i>Prologue.</i></div><br></a>
-    <a href='events'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Events</span><br><i>A large rift has opened above the island. </i></div><br></a>
-    <a href='news'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>News</span><br><i>Fallen.</i></div><br>
-    <a href='extra'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Extra Content</span><br><i>Source files, character references, etc.</i></div><br></a>
+    <a href='events.html'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Events</span><br><i>A large rift has opened above the island. </i></div><br></a>
+    <a href='news.html'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>News</span><br><i>Fallen.</i></div><br>
+    <a href='extra.html'><div class='buttonbox'><span style='text-align: left; font-size: 30px'>Extra Content</span><br><i>Source files, character references, etc.</i></div><br></a>
 </center>
