update for 2/17 release

--- a/episodes/index.html
+++ b/episodes/index.html
@@ -51,5 +51,5 @@
 <h4>Chapter 2</h4>
 <h3>Chapter 1</h3>
 <h2>Prologue</h2>
-<div class='buttonbox'>February 26th, 2024<br><span style='text-align: left; font-size: 30px'>Ep. 2</span><br><i>Fallen.</i></div><br>
-<a href='/episode/1'><div class='buttonbox'>February 19th, 2024<br><span style='text-align: left; font-size: 30px'>Ep. 1: Prologue One</span><br><i>Unknowing.</i></div><br></a>
+<div class='buttonbox'>February 24th, 2024<br><span style='text-align: left; font-size: 30px'>Ep. 2: Prologue Two</span><br><i>Fallen.</i></div><br>
+<a href='/episode/1'><div class='buttonbox'>February 16th, 2024<br><span style='text-align: left; font-size: 30px'>Ep. 1: Prologue One</span><br><i>Unknowing.</i></div><br></a>
