--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <center>
     <h1>Astral Fissure</h1>
     <div style='background-color:#181818'>---<span style="color: white; font-size: 20"><br><b>Upcoming</b><br></span>
-    <i>Episode 1: Prologue One</i> will be released February 19th.
-    <br> - Fern will be added to the cast under main characters for Prologue.
-    <br><i>Episode 2</i> will be released February 26th.
+    <i>Episode 2: Prologue Two</i> will be released February 24th.
     <br> - ??? will be added to the cast under minor characters for Prologue.
+    <br><i>Episode 3</i> will be released March 2nd.
+    <br> - ??? will be added to the cast under major characters for Chapter 1.
     <br>---
     </div>
     <br>
