--- a/episode/1/index.html
+++ b/episode/1/index.html
@@ -64,5 +64,5 @@
 <img class=epimg src=page3.png alt="Another scene is seen from the dream, which is all monochrome. Fern is sitting, upset, while the character from their dreams puts its hands on his shoulders. | Fern thinks, 'It wasn't real'. | Fern walks to work. He thinks, 'was it?' | Fern sits at a desk and thinks, 'Of course not.' | The scene cuts to black and they think 'It was just a dream.'"><br>
 <img class=epimg src=page4.png alt="Fern logs onto his work computer. Sticky notes can be seen on either side of the monitor which read 'You owe me - B.R.' and 'DO WORK'. The computer is loading, and Fern thinks 'Even still'. | The computer loads to an internet browser, with a search engine called 'Internet' pulled up, with a beige background. Fern thinks 'I can't help.' | Fern opens an employee database. The beige is now grey, to show that Fern is half dreaming. They think, 'but think.' | The scene cuts to black. Fern thinks 'Somehow, somewhere.'"><br>
 <img class=epimg src=page5.png alt="Text at the top reads 'Glass Oval Stone - 99,462.' The text is black on a white background, to show that Fern is entirely dreaming it. The white fades to beige, then to black. A white outline of the figure, body filled in with black, is shown in front of the black. Fern thinks 'I know you.'"><br><br>
-<button>Next Episode</button>   
-<a href=/episode/1><button>Last Episode</button></a>
+<a href="/episode/2"><button>Next Episode</button></a>   
+<a href=/episode/last><button>Last Episode</button></a>
